# pipeline-runner

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security-scan.yml
docs/: api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  deployment.md  getting-started.md  migration-guide.md  performance.md  plugins.md  run-requests.md  security.md  troubleshooting.md
pipeline_runner/: __init__.py  __main__.py  app.py  config.py  constants.py  exceptions.py  settings.py  wsgi.py
pipeline_runner/api/: errors.py  middleware.py  openapi.py  pagination.py  rate_limiter.py  routes.py  serializers.py  versioning.py
pipeline_runner/auth/: __init__.py  decorators.py  permissions.py  session.py  tokens.py
pipeline_runner/cli/: main.py
pipeline_runner/core/: __init__.py  dependency_graph.py  events.py  executor.py  hooks.py  metrics.py  pipeline.py  registry.py  scheduler.py  state_machine.py
pipeline_runner/models/: __init__.py  artifact.py  base.py  environment.py  pipeline.py  run.py  schedule.py  step.py  trigger.py  user.py
pipeline_runner/notifications/: dispatcher.py  email.py  slack.py  (+1 more)
scripts/: benchmark.py  export_metrics.py  generate_docs.py  health_check.py  migrate.py  seed_data.py
tests/: conftest.py  test_app.py  test_config.py
(+62 files in other folders)
